--- a/account/configs/config.yaml
+++ b/account/configs/config.yaml
@@ -8,7 +8,7 @@ server:
 data:
   database:
     driver: mysql
-    source: root:123456@tcp(127.0.0.1:3306)/piggytalk?parseTime=True&loc=Asia%2FShanghai
+    source: root:123456@tcp(127.0.0.1:3306)/piggytalk?charset=utf8mb4&parseTime=True&loc=Asia%2FShanghai
   redis:
     addr: 127.0.0.1:6379
     db: 0
